Align inventory correctly

--- a/code/ui/inventory/InventoryPanel.scss
+++ b/code/ui/inventory/InventoryPanel.scss
@@ -117,15 +117,14 @@ inventorypanel {
         height: 85%;
 
         .itemlayout {
+            margin-top: 40px;
             width: 100%;
             height: 100%;
-            padding: 16px;
-
-            inventorycontainerpanel {
-                left: 25%;
-                width: 50%;
-                height: 50%;
-            }
+            flex-direction: column;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            align-content: center;
         }
     }
 
